@@ -3,11 +3,10 @@ package com.fishercoder;
 import com.fishercoder.common.classes.TreeNode;
 import com.fishercoder.common.utils.TreeUtils;
 import com.fishercoder.solutions._700;
-import com.fishercoder.solutions._74;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static junit.framework.Assert.assertEquals;
 
@@ -23,8 +22,8 @@ public class _700Test {
 
     @Test
     public void test1() {
-        root = TreeUtils.constructBinaryTree(List.of(4, 2, 7, 1, 3));
-        expected = TreeUtils.constructBinaryTree(List.of(2, 1, 3));
+        root = TreeUtils.constructBinaryTree(Arrays.asList(4, 2, 7, 1, 3));
+        expected = TreeUtils.constructBinaryTree(Arrays.asList(2, 1, 3));
         assertEquals(expected, solution1.searchBST(root, 2));
     }
 }
